5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1637_1053.log
== SUBMITION (2019-04-10 23:37:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input('nome do patrono: '))

if a == "cervo":
	print(a," eh patrono do Harry Potter")
	else:
	print(a, " nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.138491
-- ERROR:
  File "/home/codebench/codes/1637/1053/main.py", line 9
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:38:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input('nome do patrono: '))

if a == "cervo":
	print(a,"eh patrono do Harry Potter")
	else:
	print(a, "nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.135792
-- ERROR:
  File "/home/codebench/codes/1637/1053/main.py", line 9
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:38:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input('nome do patrono: '))

if a == "cervo":
	print(a,"eh patrono do Harry Potter")
	else:
	print(a, "nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:38:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input('nome do patrono: '))

if a == "cervo":
	print(a,"eh patrono do Harry Potter")
else:
	print(a, "nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.189728
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
